# sdl-vulkan-learn

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gersemirc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md  sonar-project.properties
.github/workflows/: base-build.yml.disable  coverage.yml  crossplatform-build.yml.disable
cmake/: options-config.cmake
cmake/gersemi/: sort_args.py
docker/: Dockerfile.ArchLinux
example/: CMakeLists.txt  example.cxx  example_sdl.cxx
lib/: CMakeLists.txt
src/: CMakeLists.txt  svl.cxx  svl.cxxm  svl_config.hxx.in  template.cxx  template.cxxm  version.hxx.in
src/core/: CMakeLists.txt
src/device/: CMakeLists.txt  device.cxxm  keyboard.cxxm  mouse.cxxm
src/device/control/: keycode.cxxm
src/device/detail/: keycode.hxx  mouse_button.hxx
src/platform/: CMakeLists.txt  platform.cxxm
src/platform/device/: CMakeLists.txt  device.cxxm  gpu.cxxm
src/platform/window/: CMakeLists.txt  window.cxx  window.cxxm  window.hxx
src/render/: CMakeLists.txt  render.cxx  render.cxxm
src/render/utils/: CMakeLists.txt  vulkan_extension.cxxm  vulkan_helpers.cxxm
src/renderer/: CMakeLists.txt  renderer.cxxm
src/renderer/queue/: command_manager.cxxm
src/utils/: CMakeLists.txt  result_check.cxxm
src/window/: CMakeLists.txt  window.cxx  window.cxxm
src/window/device/: CMakeLists.txt
tests/: CMakeLists.txt  coverage.cxx
tests/renderer/: shader_compile.cxx
