find_package(SDL3 GLOBAL)

if(NOT SDL3_FOUND OR SVL_DEBUG_3RDPARTY)
    # Not work for me
    set(SDL_STATIC OFF)
    set(SDL_SHARED ON)
    set(SDL_TESTS OFF)
    set(SDL_WAYLAND ON)
    set(SDL_DISABLE_INSTALL ON)
    add_subdirectory(SDL EXCLUDE_FROM_ALL SYSTEM)
endif()

find_package(Vulkan REQUIRED GLOBAL)
# set(VULKAN_HPP_GENERATOR_BUILD ON)
# set(VULKAN_HPP_RUN_GENERATOR ON)
# set(VULKAN_HPP_BUILD_CXX_MODULE ON)
# add_subdirectory(Vulkan-Hpp EXCLUDE_FROM_ALL SYSTEM)
